kubernetes/traefik-cert-manager/overseerr/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: overseerr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.local.westermanonline.com`)
      kind: Rule
      services:
        - name: overseerr
          port: 80
      middlewares:
        - name: default-headers
    - match: Host(`overseerr.westermanonline.com`)
      kind: Rule
      services:
        - name: overseerr
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-westermanonline-com-tls
